course layout with breadcrumbs

--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -5,6 +5,10 @@ date: "August 1, 2015 -- Montpellier, France -- ICCB/ECCB Congress"
 output: pdf_document
 subtitle: Maximum Likelihood Estimation
 layout: default
+course:
+  year: 2015
+  location: Montpellier
+  lecture: Basics
 ---
 
 ### Introduction
