--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "Hierarchical Models Made Easy"
+title: "Maximum Likelihood Estimation"
 author: "Peter Solymos and Subhash Lele"
 date: "August 1, 2015 -- Montpellier, France -- ICCB/ECCB Congress"
 output: pdf_document
-subtitle: Maximum Likelihood Estimation
-layout: default
+layout: course
 course:
   year: 2015
   location: Montpellier
+  title: "Hierarchical Models Made Easy"
   lecture: Basics
 ---
 
