--- a/courses/2015/montpellier/app-01-normal-prior.Rmd
+++ b/courses/2015/montpellier/app-01-normal-prior.Rmd
@@ -10,7 +10,7 @@ inputPanel(
   sliderInput("p", label = "Probability (true)",
               min = 0, max = 1, value = 0.3, step = 0.05),
   sliderInput("n", label = "Sample size",
-              min = 0, max = 1000, value = 10, step = 10),
+              min = 1, max = 1000, value = 10, step = 10),
   sliderInput("mu", label = "Normal prior mean",
               min = -10, max = 10, value = 0, step = 1),
   sliderInput("sig2", label = "Normal prior variance",
@@ -41,8 +41,12 @@ renderPlot({
     M <- cbind(Pri=Pri/max(Pri),
         Lik=Lik/max(Lik),
         Pos=Pos/max(Pos))
-    if (input$scale == "logit")
+    if (input$scale == "logit") {
+        p <- qlogis(input$p)
         pval <- qlogis(pval)
+    } else {
+        p <- input$p
+    }
     Col <- c("#cccccc", "#3498db", "#f39c12")
     matplot(pval, M, type = "l", 
         col=Col, lwd=2, lty=1,
@@ -50,9 +54,10 @@ renderPlot({
         xlab=ifelse(input$scale == "logit", "logit(p)","p"),
         sub=paste0("Mean = ", round(mean(y[1:input$n]), 2), " (", 
             sum(1-y[1:input$n]), " 0s & ", sum(y[1:input$n]), " 1s)"),
-        main = paste("Posterior mean =", round(sum(pval * M[,"Pos"]), 2)))
-    abline(v = input$p, lwd = 2, col = "#c7254e")
-    abline(v = sum(pval * Pos/sum(Pos)), lwd = 2, col = "#18bc9c")
+        main = paste0("True value = ", round(p, 2), 
+            ", Posterior mode = ", round(pval[which.max(Pos)], 2)))
+    abline(v = p, lwd = 2, col = "#c7254e")
+    abline(v = pval[which.max(Pos)], lwd = 2, col = "#18bc9c")
     legend("topleft",lty=1, lwd=2, col=Col, bty="n",
            legend=c("Prior","Likelihood","Posterior"))
 })
