--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -736,3 +736,17 @@ hist(qlogis(x), freq=FALSE)
 lines(density(qlogis(x)), col=4)
 ```
 
+## Statistical distributions
+
+Normal
+Bernoulli
+Binomial
+Poisson
+Lognormal
+Gamma
+Beta
+
+n
+seed
+
+
