--- a/dc.Rmd
+++ b/dc.Rmd
@@ -55,12 +55,11 @@ for users who are not familiar with Bayesian methodology.
 This paper demonstrates the implementation of the data cloning algorithm, and presents a case study on
 how to write high level functions for specific modeling problems.
 
+## References
 
-[^Lele2007]: Lele, S.R., B. Dennis and F. Lutscher, 2007. Data cloning: easy maximum likelihood estimation for complex ecological models using Bayesian Markov chain Monte Carlo methods. *Ecology Letters* **10**, 551&ndash;563. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://www.math.ualberta.ca/~slele/publications/Lele%20Dennis%20Lutscher%20data%20cloning%20Ecology%20Letters%2020071.pdf) &mdash; <i class="fa fa-external-link"></i>&nbsp;[citing articles](https://scholar.google.ca/scholar?cites=10254594770183679179&as_sdt=2005&sciodt=0,5&hl=en)
+[^Lele2007]: Lele, S.R., B. Dennis and F. Lutscher, 2007. Data cloning: easy maximum likelihood estimation for complex ecological models using Bayesian Markov chain Monte Carlo methods. *Ecology Letters* **10**, 551&ndash;563. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://www.math.ualberta.ca/~slele/publications/Lele%20Dennis%20Lutscher%20data%20cloning%20Ecology%20Letters%2020071.pdf)
 
-[^Lele2010]: Lele, S. R., Nadeem, K., and Schmuland, B., 2010. Estimability and likelihood inference for generalized linear mixed models using data cloning. *Journal of the American Statistical Association* **105**, 1617&ndash;1625. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://www.math.ualberta.ca/~slele/publications/Lele%20et%20al%20GLMM%202010.pdf) &mdash; <i class="fa fa-external-link"></i>&nbsp;[citing articles](https://scholar.google.ca/scholar?cites=7376405901792313149&as_sdt=2005&sciodt=0,5&hl=en)
+[^Lele2010]: Lele, S. R., Nadeem, K., and Schmuland, B., 2010. Estimability and likelihood inference for generalized linear mixed models using data cloning. *Journal of the American Statistical Association* **105**, 1617&ndash;1625. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://www.math.ualberta.ca/~slele/publications/Lele%20et%20al%20GLMM%202010.pdf)
 
-[^Solymos2010]: S&oacute;lymos, P., 2010. dclone: Data Cloning in R. *The R Journal* **2(2)**, 29&ndash;37. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://journal.r-project.org/archive/2010-2/RJournal_2010-2_Solymos.pdf) &mdash; <i class="fa fa-external-link"></i>&nbsp;[citing articles](https://scholar.google.ca/scholar?cites=3899679749958212169&as_sdt=2005&sciodt=0,5&hl=en)
-
-
+[^Solymos2010]: S&oacute;lymos, P., 2010. dclone: Data Cloning in R. *The R Journal* **2(2)**, 29&ndash;37. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://journal.r-project.org/archive/2010-2/RJournal_2010-2_Solymos.pdf)
 
