fix links and hide

--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -10,7 +10,8 @@ course:
   location: Montpellier
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: Basics
-  next: notes-02-dc
+  previous: how-to-prepare
+  next: notes-02-occupancy
 ---
 
 ### Introduction
