--- a/courses/2015/montpellier/index.Rmd
+++ b/courses/2015/montpellier/index.Rmd
@@ -11,4 +11,10 @@ This training course is aimed towards the conservation professionals who need to
 
 * [About the course]({{ site.baseurl }}/courses/2015/montpellier/about-the-course.html)
 * [What to do before the course]({{ site.baseurl }}/courses/2015/montpellier/how-to-prepare.html)
-
+* Lecture 1: Basics ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-01-basics.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-01-basics.html)
+* Lecture 2: Hierarchical models ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-02-hmods.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-02-hmods.html)
+* Lecture 3: Population viability analysis ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-03-pva.html), [notes]({{ site.baseurl }}/courses/2015/montpellier/slides-03-pva.html)) 
+* Lecture 4: Miscellaneous topics ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-04-misc.html), [notes]({{ site.baseurl }}/courses/2015/montpellier/notes-04-misc.html))
+* [A list of Shiny apps used in the lectures]({{ site.baseurl }}/courses/2015/montpellier/apps.html)
+{% comment %}
+{% endcomment %}
