--- a/courses/2015/montpellier/notes-04-misc.Rmd
+++ b/courses/2015/montpellier/notes-04-misc.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Miscellaneous"
+title: "Miscellaneous topics"
 author: "Peter Solymos and Subhash Lele"
 date: "August 1, 2015 -- Montpellier, France -- ICCB/ECCB Congress"
 output: pdf_document
