--- a/courses/2015/montpellier/index.Rmd
+++ b/courses/2015/montpellier/index.Rmd
@@ -10,11 +10,27 @@ layout: default
 This training course is aimed towards the conservation professionals who need to understand and feel comfortable with modern statistical and computational tools used to address pressing conservation issues. By presenting both Bayesian and Likelihood based approaches, the participants will be able to go beyond the rhetorics of philosophy of statistics and use the tools with full understanding of their assumptions and implications.
 
 * [About the course]({{ site.baseurl }}/courses/2015/montpellier/about-the-course.html)
+* [What to do before the course]({{ site.baseurl }}/courses/2015/montpelli
+
+***
+
+## Course resources
+
+The links below will take you to the course material pages:
+lecture notes and slides.
+There are navigation (previous/next) buttons within each
+page. You can download the lecture notes in various
+formats (html, pdf, source Rmd).
+
+* [About the course]({{ site.baseurl }}/courses/2015/montpellier/about-the-course.html)
 * [What to do before the course]({{ site.baseurl }}/courses/2015/montpellier/how-to-prepare.html)
 * Lecture 1: Basics ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-01-basics.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-01-basics.html))
 * Lecture 2: Hierarchical models ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-02-hmods.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-02-hmods.html))
 * Lecture 3: Population viability analysis ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-03-pva.html), [notes]({{ site.baseurl }}/courses/2015/montpellier/slides-03-pva.html)) 
 * Lecture 4: Miscellaneous topics ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-04-misc.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-04-misc.html))
 * [A list of Shiny apps used in the lectures]({{ site.baseurl }}/courses/2015/montpellier/apps.html)
+
+Alternatively, clone or download the full website content from
+[GitHub](https://github.com/datacloning/datacloning.github.io).
 {% comment %}
 {% endcomment %}
